<resources>
    <string name="app_name">GES_Books_01</string>
    <string name="title_sugerencias">Sugerencias</string>
    <string name="title_buscar">Buscar</string>
    <string name="title_agregar">Agregar</string>
    <string name="title_mis_post">Mis Post</string>
    <string name="title_favoritos">Favoritos</string>
    <string name="title_login">Login</string>
    <string name="title_registro">Registro</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id_sec" translatable="false">666713139759-igq8r71ugq78drh3krcvrsicjbg0jhun.apps.googleusercontent.com</string>
</resources>