<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_sugerencias"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_sugerencias" />

    <item
        android:id="@+id/navigation_buscar"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_buscar" />

    <item
        android:id="@+id/navigation_agregar"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_agregar" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_mis_post" />

    <item
        android:id="@+id/navigation_favoritos"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_favoritos" />

</menu>