<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_sugerencias">

    <fragment
        android:id="@+id/navigation_sugerencias"
        android:name="com.danp.ges_books_01.ui.sugerencias.SugerenciasFragment"
        android:label="@string/title_sugerencias"
        tools:layout="@layout/fragment_sugerencias" />

    <fragment
        android:id="@+id/navigation_buscar"
        android:name="com.danp.ges_books_01.ui.buscar.BuscarFragment"
        android:label="@string/title_buscar"
        tools:layout="@layout/fragment_buscar" />

    <fragment
        android:id="@+id/navigation_agregar"
        android:name="com.danp.ges_books_01.ui.agregar.AgregarFragment"
        android:label="@string/title_agregar"
        tools:layout="@layout/fragment_agregar" />

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.danp.ges_books_01.ui.post.Post"
        android:label="@string/title_mis_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/navigation_favoritos"
        android:name="com.danp.ges_books_01.ui.favoritos.Favoritos"
        android:label="@string/title_favoritos"
        tools:layout="@layout/fragment_favoritos" />
</navigation>